<resources>
    <string name="app_name">AVPortal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_stageMode">Stage Mode</string>

    <string name="menu_announcements">Announcements</string>
    <string name="menu_events">Events</string>
    <string name="menu_equipment">Equipment</string>
    <string name="menu_lights">Lights</string>
    <string name="menu_sound">Sound</string>
    <string name="menu_resources">Documents</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_title_admin">Admin</string>
    <string name="menu_title_practice">Practice</string>
    <string name="menu_title_resources">Resources</string>

    <string name="home_second">Home Second</string>

    <string name="loginBtn">LOGIN</string>
    <string name="logoutBtn">LOGOUT</string>
    <string name="signUpBtn">SIGN UP</string>
    <string name="loginSubmitBtn">LOGIN</string>

    <string name="emailHint">NUSH email</string>
    <string name="passwordHint">Password</string>
    <string name="nameHint">Full name</string>
    <string name="phoneHint">Phone number</string>
    <string name="searchHint">Search term</string>
    <string name="searchBtn">Search</string>

    <string name="pending">Pending</string>
    <string name="approved">Approved!</string>

    <string name="noUser">Please log-in to use this feature.</string>
    <string name="imageUploaded">Image uploaded</string>
    <string name="imagesUploaded">images uploaded.</string>

    <string name="shareBtn">SHARE</string>
    <string name="shareImage">Share Image</string>
    <string name="addImage">ADD IMAGE</string>
    <string name="newAnn">Add new announcement</string>
    <string name="newEqui">Add new equipment</string>
    <string name="addBtn">ADD</string>
    <string name="addToCal">Add to Calendar</string>
    <string name="signUpConfirm">Are you sure you want to sign up for</string>
    <string name="approvalConfirm">Change allocation status</string>
    <string name="editEquiQuantity">Change equipment quantity</string>
    <string name="deleteConfirm">Delete this?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="applications">Applications</string>

    <string name="addInfo">Additional Information</string>
    <string name="filter">Filter &amp; Sort</string>

    <string name="title_activity_settings">Settings</string>

    <string name="quantity">Quantity:</string>
    <string name="sort_prompt">Sort by</string>
    <string-array name="sorts">
        <item>Cost - Asc.</item>
        <item>Cost - Desc.</item>
        <item>Quantity - Asc.</item>
        <item>Quantity - Desc.</item>
    </string-array>

    <string name="annInputTitle">Title</string>
    <string name="annInputContent">Content</string>
    <string name="annInputUrl">URL (optional)</string>

    <string name="addImages">ADD IMAGES</string>
    <string name="equiInputBrand">Brand</string>
    <string name="equiInputName">Name</string>
    <string name="equiInputDesc">Description</string>
    <string name="equiInputCost">Cost</string>
    <string name="equiInputQuan">Quantity</string>

    <string name="stageInputNotif">Notification message</string>
    <string name="stageInputTTS">Text-To-Speech message</string>
    <string name="newStageAction">New stage action</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="upload">Upload</string>
    <string name="ok">Ok</string>

    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="add">add</string>
    <string name="macro">macro</string>
    <string name="macroConfirm">Attach macro? (permanent)</string>
    <string name="finish">finish</string>

    <string name="shakeIntensity">Shake intensity for macro</string>

    <string name="lightingPrompt">Adjust the faders as per the lighting cues shown here: \n</string>
    <string-array name="shake_intensities">
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </string-array>
    <string name="noAnn">No announcements found</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
<string name="seekBarCount">Number of faders for lights</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
