<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/menu_title_admin">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_announcements"
                    android:icon="@drawable/ic_announcement_black_24dp"
                    android:title="@string/menu_announcements" />
                <item
                    android:id="@+id/nav_events"
                    android:icon="@drawable/ic_event_black_24dp"
                    android:title="@string/menu_events" />
                <item
                    android:id="@+id/nav_equipment"
                    android:icon="@drawable/ic_equipment_black_24dp"
                    android:title="@string/menu_equipment" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_title_practice">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_lights"
                    android:icon="@drawable/ic_lightbulb_outline_black_24dp"
                    android:title="@string/menu_lights" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_title_resources">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_resources"
                    android:icon="@drawable/ic_resources_black_24dp"
                    android:title="@string/menu_resources" />
<!--                <item-->
<!--                    android:id="@+id/nav_gallery"-->
<!--                    android:icon="@drawable/ic_menu_gallery"-->
<!--                    android:title="@string/menu_gallery" />-->
            </group>
        </menu>
    </item>
</menu>
