<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_announcements">

    <fragment
        android:id="@+id/nav_announcements"
        android:name="com.stevecao.avportal.fragment.AnnouncementsFragment"
        android:label="@string/menu_announcements"
        tools:layout="@layout/fragment_announcements"/>
    <fragment
        android:id="@+id/nav_events"
        android:name="com.stevecao.avportal.fragment.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_equipment"
        android:name="com.stevecao.avportal.fragment.EquipmentFragment"
        android:label="@string/menu_equipment"
        tools:layout="@layout/fragment_equipment" />
    <fragment
        android:id="@+id/nav_lights"
        android:name="com.stevecao.avportal.fragment.LightsFragment"
        android:label="@string/menu_lights"
        tools:layout="@layout/fragment_lights" />
</navigation>