<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_stageMode"
        android:orderInCategory="90"
        android:title="@string/action_stageMode"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_stage_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="110"
        android:visible="false"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
