<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EquipmentFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/equiFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:src="@drawable/ic_add_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.florent37.expansionpanel.ExpansionHeader
            android:id="@+id/expansionHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            app:expansion_headerIndicator="@id/headerIndicator"
            app:expansion_layout="@id/expansionLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/filter"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/headerIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="16dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />
        </com.github.florent37.expansionpanel.ExpansionHeader>

        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/equiSearchText"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:ems="10"
                        android:hint="@string/searchHint"
                        android:inputType="textPersonName" />

                    <Spinner
                        android:id="@+id/equiSortSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:entries="@array/sorts"
                        android:prompt="@string/sort_prompt" />

                </LinearLayout>

                <Button
                    android:id="@+id/equiSearchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/searchBtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.github.florent37.expansionpanel.ExpansionLayout>
    </LinearLayout>

    <View
        android:id="@+id/equiView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/equiSRL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/equiNoUser"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/noUser"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/equiLoadingIV"
        android:layout_width="217px"
        android:layout_height="217px"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loading2" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/equiSRL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equiView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/equiRV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>




</androidx.constraintlayout.widget.ConstraintLayout>